overflow fix

--- a/css/About_Us.css
+++ b/css/About_Us.css
@@ -30,3 +30,6 @@ img{
     
     100% {transform: rotate(360deg);}
 }
+.container{
+    margin-bottom: 10px;
+}
